@@ -16,53 +16,44 @@
 #      Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA.
 ########################################################################
 
-from form import Field, DomainField, Form
-from views import *
+from form import FormError
+from views import TextField
+import time
+
+__all__=['IntegerField', 'DoubleField', 'DateField']
 
 ########################################################################
 # Validating fields
 ########################################################################
 
 class IntegerField(TextField):
-    """\
-    Restricts validated input to integer values
-    """
+    "Restricts validated input to integer values"
     def validate(self, form=None):
-        supVal = TextField.validate(self)
-        if supVal:
-            # superclass validation failed
-            return supVal
-
+        errorlist= TextField.validate(self) or []
         if self.value:
             try:
                 int(self.value)
-            except ValueError,ve:
-                return {self: str(ve)}
-        return None
+            except ValueError, ve:
+                errorlist.append(FormError(self, str(ve)))
+        return errorlist
         
 
 class DoubleField(TextField):
-    """\
-    Restricts validated input to double values
-    """
+    "Restricts validated input to double values"
+    
     def validate(self, form=None):
-        supVal = TextField.validate(self)
-        if supVal:
-            # superclass validation failed
-            return supVal
-
+        errorlist=TextField.validate(self) or []
         if self.value:
             try:
                 float(self.value)
             except ValueError, ve:
-                return {self: str(ve)}
-        return None
+                errorlist.append(FormError(self, str(ve)))
+        return errorlist
 
 
 class DateField(TextField):
-    """\
-    Restricts validate input to a string which conform to a particular date String
-    """
+    "Restricts validated input to a string which parseable according to"\
+    "a specified format."
     def __init__(self,
                  name,
                  description=None,
@@ -71,24 +62,26 @@ class DateField(TextField):
                  formatString='%m/%d/%Y',
                  **view_attrs):
         """\
-        Accepts an optional string which represents the date format which the instance will validate against,
+        Accepts an optional string which represents the date format
+        which the instance will validate against,
         defaults to mm/dd/yyyy format ['%m/%d/%Y']
         """
-        TextField.__init__(self, name, description, default, required)
-        Viewable.__init__(self, **view_attrs)
+        TextField.__init__(self,
+                           name,
+                           description,
+                           default,
+                           required,
+                           **view_attrs)
         self.format = formatString
 
     
     def validate(self, form=None):
-        supVal = TextField.validate(self)
-        if supVal:
-            # superclass validation failed
-            return supVal
+        errorlist=TextField.validate(self) or []
 
         if self.value:
             try:
-                from time import strptime
-                strptime(self.value, self.format)
+                time.strptime(self.value, self.format)
             except ValueError, ve:
-                return {self: "%s: Expected format: %s" % (str(ve), self.format)}
-        return None
+                msg="%s: Expected format: %s" % (str(ve), self.format)
+                errorlist.append(FormError(self, msg))
+        return errorlist
